@@ -37,17 +37,29 @@ import android.app.AlertDialog;
 import android.app.ProgressDialog;
 import android.content.Context;
 import android.content.DialogInterface;
+import android.content.Intent;
+import android.content.SharedPreferences;
 import android.content.DialogInterface.OnCancelListener;
+import android.content.SharedPreferences.Editor;
+import android.content.pm.PackageManager;
 import android.net.ConnectivityManager;
+import android.net.Uri;
 import android.os.AsyncTask;
 import android.os.Bundle;
 import android.os.RemoteException;
+import android.util.Log;
 import android.view.View;
 import android.view.View.OnClickListener;
 import android.widget.Button;
 import android.widget.LinearLayout;
 import android.widget.Toast;
-
+import com.dropbox.client2.DropboxAPI;
+import com.dropbox.client2.android.AndroidAuthSession;
+import com.dropbox.client2.android.AuthActivity;
+import com.dropbox.client2.session.AccessTokenPair;
+import com.dropbox.client2.session.AppKeyPair;
+import com.dropbox.client2.session.Session.AccessType;
+import com.dropbox.client2.session.TokenPair;
 
 /**
  * 
@@ -55,6 +67,27 @@ import android.widget.Toast;
  * 
  */
 public class LIMEInitial extends Activity {
+	private final boolean DEBUG = true;
+	private final String TAG = "LIMEInitial";
+	// Dropbox API by Jeremy '12,12,22
+    // Note that this is a really insecure way to do this, and you shouldn't
+    // ship code which contains your key & secret in such an obvious way.
+    // Obfuscation is good.
+    final static private String APP_KEY = "keuuzhfc6efjf6t";
+    final static private String APP_SECRET = "4y8fy4rqk8rofd8";
+    // If you'd like to change the access type to the full Dropbox instead of
+    // an app folder, change this value.
+    final static private AccessType ACCESS_TYPE = AccessType.APP_FOLDER;
+    // You don't need to change these, leave them alone.
+    final static private String ACCOUNT_PREFS_NAME = "prefs";
+    final static private String ACCESS_KEY_NAME = "ACCESS_KEY";
+    final static private String ACCESS_SECRET_NAME = "ACCESS_SECRET";   
+    DropboxAPI<AndroidAuthSession> mDropboxApi;
+
+    private boolean mDropboxLoggedIn;
+    private boolean pendingDropboxBackup = false;
+    private boolean pendingDropboxRestore = false;
+
 	
 
 	private DBServer DBSrv = null;
@@ -67,6 +100,8 @@ public class LIMEInitial extends Activity {
 	Button btnRestoreDB = null;
 	Button btnCloudBackupDB = null;
 	Button btnCloudRestoreDB = null;
+	Button btnDropboxBackupDB = null;
+	Button btnDropboxRestoreDB = null;
 	Button btnStoreDevice = null;
 	Button btnStoreSdcard = null;
 	private ProgressDialog cloudpd;
@@ -95,8 +130,11 @@ public class LIMEInitial extends Activity {
 	/** Called when the activity is first created. */
 	@Override
 	public void onCreate(Bundle icicle) {
-		
 		super.onCreate(icicle);
+		if(DEBUG)
+			Log.i(TAG, "onCreate()");
+		
+		
 		this.setContentView(R.layout.initial);
 		activity = this;
 		
@@ -106,6 +144,12 @@ public class LIMEInitial extends Activity {
 		mLIMEPref = new LIMEPreferenceManager(getApplicationContext());
 		connManager = (ConnectivityManager) getSystemService(Context.CONNECTIVITY_SERVICE);
 		
+		//Dropbox initialization  '12,12,23 Jermey
+		// We create a new AuthSession so that we can use the Dropbox API.
+        AndroidAuthSession session = buildSession();
+        mDropboxApi = new DropboxAPI<AndroidAuthSession>(session);
+        checkAppKeySetup();
+		mDropboxLoggedIn = mDropboxApi.getSession().isLinked();
 	    
 		// Initial Buttons
 		initialButton();
@@ -165,6 +209,8 @@ public class LIMEInitial extends Activity {
 				
 				// Reset for SearchSrv
 				mLIMEPref.setResetCacheFlag(true);
+			
+				
 				
 			}
 		});
@@ -352,6 +398,7 @@ public class LIMEInitial extends Activity {
 		
 		btnRestoreDB.setOnClickListener(new OnClickListener() {
 			public void onClick(View v) {
+					
 					File srcFile = new File(LIME.IM_LOAD_LIME_ROOT_DIRECTORY + File.separator + LIME.DATABASE_BACKUP_NAME);
 					File srcFile2 = new File(LIME.DATABASE_DECOMPRESS_FOLDER_SDCARD + File.separator + LIME.DATABASE_NAME);
 					if((srcFile2.exists() && srcFile2.length() > 1024) || (srcFile.exists() && srcFile.length() > 1024)){
@@ -405,8 +452,8 @@ public class LIMEInitial extends Activity {
 	     				builder.setCancelable(false);
 	     				builder.setPositiveButton("Yes", new DialogInterface.OnClickListener() {
 	     					public void onClick(DialogInterface dialog, int id) {
-		     						//TODO: String dbtarget = mLIMEPref.getParameterString("dbtarget");
-									backupCloudDatabase();
+		   						
+									backupDatabaseGooldDrive();
 			    	        	}
 			    	     });
 			    	    builder.setNegativeButton("No", new DialogInterface.OnClickListener() {
@@ -456,6 +503,65 @@ public class LIMEInitial extends Activity {
 				}
 			}
 		});
+		
+		btnDropboxBackupDB.setOnClickListener(new OnClickListener() {
+			public void onClick(View v) {
+				
+				if(DEBUG)
+					Log.i(TAG, "Dropbox link, mDropboxLoggedIn = " +mDropboxLoggedIn);
+				
+				if(connManager.getActiveNetworkInfo() != null && connManager.getActiveNetworkInfo().isConnected()){
+		        	
+			        
+					File srcFile = new File(LIME.DATABASE_DECOMPRESS_FOLDER + File.separator + LIME.DATABASE_NAME);
+					File srcFile2 = new File(LIME.DATABASE_DECOMPRESS_FOLDER_SDCARD + File.separator + LIME.DATABASE_NAME);
+					if((srcFile2.exists() && srcFile2.length() > 1024) || (srcFile.exists() && srcFile.length() > 1024)){
+						AlertDialog.Builder builder = new AlertDialog.Builder(v.getContext());
+	     				builder.setMessage(getText(R.string.l3_initial_dropbox_backup_confirm));
+	     				builder.setCancelable(false);
+	     				builder.setPositiveButton("Yes", new DialogInterface.OnClickListener() {
+	     					public void onClick(DialogInterface dialog, int id) {
+
+	     						if (!mDropboxLoggedIn) {
+	     							// Start the remote authentication
+	     							mDropboxApi.getSession().startAuthentication(LIMEInitial.this);
+	     							pendingDropboxBackup = true; //do database backup after on Resume();
+	     						}else{
+	     							//
+	     							backupDatabaseDropbox();
+	     						}
+	     					}
+	     				});
+			    	    builder.setNegativeButton("No", new DialogInterface.OnClickListener() {
+			    	    	public void onClick(DialogInterface dialog, int id) {
+			    	        	}
+			    	     }); 
+	        
+						AlertDialog alert = builder.create();
+									alert.show();
+					}else{
+						Toast.makeText(v.getContext(), getText(R.string.l3_initial_cloud_backup_error), Toast.LENGTH_SHORT).show();
+					}
+				}else{
+		        	Toast.makeText(v.getContext(), getText(R.string.l3_tab_initial_error), Toast.LENGTH_SHORT).show();
+				}
+				
+			}
+		});
+		
+		btnDropboxRestoreDB.setOnClickListener(new OnClickListener() {
+			public void onClick(View v) {
+				if(DEBUG)
+					Log.i(TAG, "Dropbox link, mDropboxLoggedIn = " +mDropboxLoggedIn);
+				if (mDropboxLoggedIn) {
+                    logOut();
+                } else {
+                    // Start the remote authentication
+                    mDropboxApi.getSession().startAuthentication(LIMEInitial.this);
+                }
+			}
+		});
+			
 		
 		btnStoreDevice.setOnClickListener(new OnClickListener() {
 			public void onClick(View v) {
@@ -515,7 +621,7 @@ public class LIMEInitial extends Activity {
         adView.loadAd(adRequest);
 
 		// Reset Cloud Backup Status
-		mLIMEPref.setParameter("cloud_in_process",new Boolean(false));
+		mLIMEPref.setParameter("cloud_in_process",Boolean.valueOf(false));
 
 	}
 	
@@ -533,9 +639,34 @@ public class LIMEInitial extends Activity {
 	 * @see android.app.Activity#onStart()
 	 */
 	@Override
-	protected void onResume() {
-		super.onStart();
+	protected void onResume() {	
+		super.onResume();
+		if(DEBUG)
+			Log.i(TAG, "onResume()");
 		initialButton();
+		//Dropbox onResume
+		 AndroidAuthSession session = mDropboxApi.getSession();
+
+	        // The next part must be inserted in the onResume() method of the
+	        // activity from which session.startAuthentication() was called, so
+	        // that Dropbox authentication completes properly.
+	        if (session.authenticationSuccessful()) {
+	            try {
+	                // Mandatory call to complete the auth
+	                session.finishAuthentication();
+
+	                // Store it locally in our app for later use
+	                TokenPair tokens = session.getAccessTokenPair();
+	                storeKeys(tokens.key, tokens.secret);
+	                mDropboxLoggedIn = true;
+	                if(pendingDropboxBackup){
+	                	backupDatabaseDropbox();
+	                }
+	            } catch (IllegalStateException e) {
+	                Log.i(TAG, "Error authenticating", e);
+	            }
+	        }
+	        pendingDropboxBackup = false;
 	}
 
 	public void resetLabelInfo(String imtype){
@@ -560,6 +691,8 @@ public class LIMEInitial extends Activity {
 			btnRestoreDB = (Button) findViewById(R.id.btnRestoreDB);	
 			btnCloudBackupDB = (Button) findViewById(R.id.btnCloudBackupDB);
 			btnCloudRestoreDB = (Button) findViewById(R.id.btnCloudRestoreDB);
+			btnDropboxBackupDB = (Button) findViewById(R.id.btnDropboxBackupDB);
+			btnDropboxRestoreDB = (Button) findViewById(R.id.btnDropboxRestoreDB);
 			btnStoreDevice = (Button) findViewById(R.id.btnStoreDevice);
 			btnStoreSdcard = (Button) findViewById(R.id.btnStoreSdcard);
 		}
@@ -611,29 +744,39 @@ public class LIMEInitial extends Activity {
 	}
 
 	public void backupDatabase(){
-		 BackupRestoreTask task = new BackupRestoreTask(this,this.getApplicationContext(), DBSrv, null, BackupRestoreTask.BACKUP);
+		 BackupRestoreTask task = new BackupRestoreTask(this,this.getApplicationContext(), DBSrv, BackupRestoreTask.BACKUP);
 		 task.execute("");
 	}
 
 	public void restoreDatabase(){
-		 BackupRestoreTask task = new BackupRestoreTask(this,this.getApplicationContext(), DBSrv, null, BackupRestoreTask.RESTORE);
+		 BackupRestoreTask task = new BackupRestoreTask(this,this.getApplicationContext(), DBSrv, BackupRestoreTask.RESTORE);
 		 task.execute("");
 	}
 	
-	public void backupCloudDatabase() {
-		File limedir = new File(LIME.IM_LOAD_LIME_ROOT_DIRECTORY + File.separator);
-		if(!limedir.exists()){
-			limedir.mkdirs();
-		}
+	private void backupDatabaseDropbox(){
+		BackupRestoreTask task = new BackupRestoreTask(LIMEInitial.this,
+    			LIMEInitial.this.getApplicationContext(), 
+    			DBSrv, BackupRestoreTask.DROPBOXBACKUP);
+		task.execute("");
 		
-		File tempFile = new File(LIME.IM_LOAD_LIME_ROOT_DIRECTORY + File.separator + LIME.DATABASE_CLOUD_TEMP);
-		tempFile.deleteOnExit();
+
+	}
+	public void backupDatabaseGooldDrive() {
 		
+	
+		//tempFile.deleteOnExit();
+	
+		BackupRestoreTask task = new BackupRestoreTask(this,this.getApplicationContext()
+				, DBSrv, BackupRestoreTask.CLOUDBACKUP);
+		task.execute("");
+		
+		
+		/*  Jeremy '12,12,23 Moved to postExcute of bakcupRestoreTask.  Zip db first (backupdatabase) before backup to google drive now.
 		cHandler = new CloudServierHandler(this);
 		bTask = new Thread(new CloudBackupServiceRunnable(cHandler, this, tempFile));
 		bTask.start();
-		
-		showProgressDialog(true);
+		*/
+		//showProgressDialog(true);
 		/*BackupRestoreTask task = new BackupRestoreTask(this,this.getApplicationContext(), DBSrv, tempFile, BackupRestoreTask.CLOUDBACKUP);
 							  task.execute("");*/
 	}
@@ -666,7 +809,7 @@ public class LIMEInitial extends Activity {
 			 cloudpd.setOnCancelListener(new OnCancelListener(){
 				@Override
 				public void onCancel(DialogInterface dialog) {
-					mLIMEPref.setParameter("cloud_in_process",new Boolean(false));
+					mLIMEPref.setParameter("cloud_in_process",Boolean.valueOf(false));
 				}
 			 });
 			 cloudpd.setIndeterminate(false);
@@ -682,7 +825,7 @@ public class LIMEInitial extends Activity {
 			 cloudpd.setOnCancelListener(new OnCancelListener(){
 				@Override
 				public void onCancel(DialogInterface dialog) {
-					mLIMEPref.setParameter("cloud_in_process",new Boolean(false));
+					mLIMEPref.setParameter("cloud_in_process",Boolean.valueOf(false));
 				}
 			 });
 			 cloudpd.setIndeterminate(false);
@@ -705,6 +848,118 @@ public class LIMEInitial extends Activity {
 		}
 	}
 	
+	
+	 private void logOut() {
+		 if(DEBUG)
+			 Log.i(TAG, "logout Dropbox session, mDropboxLoggedIn = " + mDropboxLoggedIn);
+	        // Remove credentials from the session
+	        mDropboxApi.getSession().unlink();
+
+	        // Clear our stored keys
+	        clearKeys();
+	        // Change UI state to display logged out version
+	        mDropboxLoggedIn = false;
+	    }
+
+	   
+
+    
+
+    private void checkAppKeySetup() {
+        // Check to make sure that we have a valid app key
+        if (APP_KEY.startsWith("CHANGE") ||
+                APP_SECRET.startsWith("CHANGE")) {
+            showToast("You must apply for an app key and secret from developers.dropbox.com, and add them to the DBRoulette ap before trying it.");
+            finish();
+            return;
+        }
+
+        // Check if the app has set up its manifest properly.
+        Intent testIntent = new Intent(Intent.ACTION_VIEW);
+        String scheme = "db-" + APP_KEY;
+        String uri = scheme + "://" + AuthActivity.AUTH_VERSION + "/test";
+        testIntent.setData(Uri.parse(uri));
+        PackageManager pm = getPackageManager();
+        if (0 == pm.queryIntentActivities(testIntent, 0).size()) {
+            showToast("URL scheme in your app's " +
+                    "manifest is not set up correctly. You should have a " +
+                    "com.dropbox.client2.android.AuthActivity with the " +
+                    "scheme: " + scheme);
+            finish();
+        }
+    }
+
+    private void showToast(String msg) {
+        Toast error = Toast.makeText(this, msg, Toast.LENGTH_LONG);
+        error.show();
+    }
+
+    /**
+     * Shows keeping the access keys returned from Trusted Authenticator in a local
+     * store, rather than storing user name & password, and re-authenticating each
+     * time (which is not to be done, ever).
+     *
+     * @return Array of [access_key, access_secret], or null if none stored
+     */
+    private String[] getKeys() {
+        SharedPreferences prefs = getSharedPreferences(ACCOUNT_PREFS_NAME, 0);
+        String key = prefs.getString(ACCESS_KEY_NAME, null);
+        String secret = prefs.getString(ACCESS_SECRET_NAME, null);
+        if (key != null && secret != null) {
+        	String[] ret = new String[2];
+        	ret[0] = key;
+        	ret[1] = secret;
+        	return ret;
+        } else {
+        	return null;
+        }
+    }
+
+    /**
+     * Shows keeping the access keys returned from Trusted Authenticator in a local
+     * store, rather than storing user name & password, and re-authenticating each
+     * time (which is not to be done, ever).
+     */
+    private void storeKeys(String key, String secret) {
+        // Save the access key for later
+        SharedPreferences prefs = getSharedPreferences(ACCOUNT_PREFS_NAME, 0);
+        Editor edit = prefs.edit();
+        edit.putString(ACCESS_KEY_NAME, key);
+        edit.putString(ACCESS_SECRET_NAME, secret);
+        edit.commit();
+    }
+
+    private void clearKeys() {
+        SharedPreferences prefs = getSharedPreferences(ACCOUNT_PREFS_NAME, 0);
+        Editor edit = prefs.edit();
+        edit.clear();
+        edit.commit();
+    }
+
+    private AndroidAuthSession buildSession() {
+    	if(DEBUG)
+    		Log.i(TAG, "buildSession()");
+        
+        AppKeyPair appKeyPair = new AppKeyPair(APP_KEY, APP_SECRET);
+        AndroidAuthSession session;
+
+        String[] stored = getKeys();
+        if (stored != null) {
+        	if(DEBUG)
+        		Log.i(TAG, "Got stored key, key = " + stored[0] + ", secret = " + stored[1]);
+            AccessTokenPair accessToken = new AccessTokenPair(stored[0], stored[1]);
+            session = new AndroidAuthSession(appKeyPair, ACCESS_TYPE, accessToken);
+        } else {
+        	if(DEBUG)
+        		Log.i(TAG, "no stored key. start a new session.");
+        
+            session = new AndroidAuthSession(appKeyPair, ACCESS_TYPE);
+        }
+
+        return session;
+    }
+	
+	
 	public class BackupRestoreTask extends AsyncTask<String,Integer,Integer> {
 
 
@@ -718,8 +973,11 @@ public class LIMEInitial extends Activity {
 		final public static int CLOUDRESTORE = 2;
 		final public static int BACKUP = 3;
 		final public static int RESTORE = 4;
+		final public static int DROPBOXBACKUP = 5;
+		final public static int DROPBOXRESTORE = 6;
 		
-		BackupRestoreTask(LIMEInitial act, Context srcctx, DBServer db, File file, int settype){
+		
+		BackupRestoreTask(LIMEInitial act, Context srcctx, DBServer db, int settype){
 			dbsrv = db;
 			activity = act;
 			ctx = srcctx;
@@ -730,41 +988,9 @@ public class LIMEInitial extends Activity {
 		protected void onPreExecute(){
 
 			 pd = new ProgressDialog(activity);
-			 /*if(type == CLOUDBACKUP){
-				 pd = new ProgressDialog(activity);
-				 pd.setTitle(ctx.getText(R.string.l3_initial_cloud_backup_database));
-				 pd.setMessage(ctx.getText(R.string.l3_initial_cloud_backup_start));
-				 pd.setCancelable(true);
-				 pd.setOnCancelListener(new OnCancelListener(){
-					@Override
-					public void onCancel(DialogInterface dialog) {
-						mLIMEPref.setParameter("cloud_in_process",new Boolean(false));
-					}
-				 });
-				 pd.setIndeterminate(false);
-				 pd.setProgressStyle(ProgressDialog.STYLE_HORIZONTAL);
-				 pd.setCanceledOnTouchOutside(false);
-				 pd.setMax(100);
-				 pd.show();
-			}else if(type == CLOUDRESTORE){
-				 pd = new ProgressDialog(activity);
-				 pd.setTitle(ctx.getText(R.string.l3_initial_cloud_restore_database));
-				 pd.setMessage(ctx.getText(R.string.l3_initial_cloud_restore_start));
-				 pd.setCancelable(true);
-				 pd.setOnCancelListener(new OnCancelListener(){
-					@Override
-					public void onCancel(DialogInterface dialog) {
-						mLIMEPref.setParameter("cloud_in_process",new Boolean(false));
-					}
-				 });
-				 pd.setIndeterminate(false);
-				 pd.setProgressStyle(ProgressDialog.STYLE_HORIZONTAL);
-				 pd.setCanceledOnTouchOutside(false);
-				 pd.setMax(100);
-				 pd.show();
-			}else */
+	
 			
-			if(type == BACKUP){
+			if(type == BACKUP || type == CLOUDBACKUP || type == DROPBOXBACKUP){
 				pd = ProgressDialog.show(activity, ctx.getText(R.string.l3_initial_backup_database), ctx.getText(R.string.l3_initial_backup_start),true);
 			}else if(type == RESTORE){
 				pd = ProgressDialog.show(activity, ctx.getText(R.string.l3_initial_restore_database), ctx.getText(R.string.l3_initial_restore_start),true);
@@ -777,71 +1003,46 @@ public class LIMEInitial extends Activity {
 				e.printStackTrace();
 			} 
 
-			mLIMEPref.setParameter("cloud_in_process", new Boolean(true));
+			mLIMEPref.setParameter("cloud_in_process", Boolean.valueOf(false));
 		}
 		protected void onPostExecute(Integer result){
 			pd.cancel();
-			if(type == CLOUDRESTORE || type == RESTORE){
+			if(type == CLOUDBACKUP){
+				File sourceFile = new File(LIME.IM_LOAD_LIME_ROOT_DIRECTORY + File.separator + LIME.DATABASE_BACKUP_NAME);
+				cHandler = new CloudServierHandler(LIMEInitial.this);
+				bTask = new Thread(new CloudBackupServiceRunnable(cHandler, LIMEInitial.this, sourceFile));
+				bTask.start();
+				showProgressDialog(true);
+			}else if(type == DROPBOXBACKUP){
+				//TODO: Jeremy  '12,12,23 do dropbox backup now.
+				File sourceFile = new File(LIME.IM_LOAD_LIME_ROOT_DIRECTORY + File.separator + LIME.DATABASE_BACKUP_NAME);		
+		      	DropboxDBBackup upload = new DropboxDBBackup(LIMEInitial.this, mDropboxApi, "", sourceFile);
+		    	upload.execute();
+			}else if(type == CLOUDRESTORE || type == RESTORE){
 				activity.initialButton();
 				dbsrv.checkPhoneticKeyboardSetting();//Jeremy '12,6,8 check the pheonetic keyboard consistency
 				mLIMEPref.setResetCacheFlag(true);  //Jeremy '12,7,8 reset cache.
 			}
+			
 		}
 		
 		@Override
 		protected Integer doInBackground(String... arg0) {
-			/*if(type == CLOUDBACKUP){
-				
-				cHandler = new CloudServierHandler(this);
-				bTask = new Thread(new CloudBackupServiceRunnable(sHandler, this, tempfile));
-				bTask.start();
-				
-				File srcFile = null;
-				String dbtarget = mLIMEPref.getParameterString("dbtarget");
-				if(dbtarget.equals("device")){
-					srcFile = new File(LIME.DATABASE_DECOMPRESS_FOLDER + File.separator + LIME.DATABASE_NAME);
-				}else{
-					srcFile = new File(LIME.DATABASE_DECOMPRESS_FOLDER_SDCARD + File.separator + LIME.DATABASE_NAME);
-				}
-				pd.setProgress(10);
-				dbsrv.compressFile(srcFile, LIME.IM_LOAD_LIME_ROOT_DIRECTORY, LIME.DATABASE_CLOUD_TEMP);
-				pd.setProgress(20);
-
-				dbsrv.cloudBackup(activity,  pd, tempfile);
-				if(!DBCloudServer.getStatus()){
-					mLIMEPref.setParameter(LIME.DOWNLOAD_START, false);
-					mLIMEPref.setParameter("cloud_in_process", new Boolean(false));
-					DBCloudServer.showNotificationMessage(getText(R.string.l3_initial_cloud_failed) +"", 0);
-				}
-			}else if(type == CLOUDRESTORE){
-				
-
-				cHandler = new CloudServierHandler(this);
-				rTask = new Thread(new CloudRestoreServiceRunnable(sHandler, this, tempfile));
-				rTask.start();
-				pd.setProgress(10);
-				dbsrv.cloudRestore(activity,  pd, tempfile);
-				if(!DBCloudServer.getStatus()){
-					mLIMEPref.setParameter(LIME.DOWNLOAD_START, false);
-					mLIMEPref.setParameter("cloud_in_process", new Boolean(false));
-					DBCloudServer.showNotificationMessage(getText(R.string.l3_initial_cloud_failed) +"", 0);
-				}
-			}else */
 			
-			if(type == BACKUP){
+			if(type == BACKUP || type == CLOUDBACKUP || type == DROPBOXBACKUP){
 				try {
 					dbsrv.backupDatabase();
 				} catch (RemoteException e) {
 					e.printStackTrace();
 				}
-				mLIMEPref.setParameter("cloud_in_process", new Boolean(false));
+				mLIMEPref.setParameter("cloud_in_process", Boolean.valueOf(false));
 			}else if(type == RESTORE){
 				try {
 					dbsrv.restoreDatabase();
 				} catch (RemoteException e) {
 					e.printStackTrace();
 				}
-				mLIMEPref.setParameter("cloud_in_process", new Boolean(false));
+				mLIMEPref.setParameter("cloud_in_process", Boolean.valueOf(false));
 			}
 			boolean inProcess = true;
 			do{
